--- a/site/css/style.css
+++ b/site/css/style.css
@@ -100,3 +100,12 @@ footer p a {
 .fourzerofour article h1 {
     font-size: 32px;
 }
+
+/* About */
+.about-img {
+    float: left;
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    margin: 0px 20px 20px 0px;
+}
